# sniped

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
changelog.d/: 20220318_222529_5621605+RodrigoGiraoSerrao.md  20220318_223706_5621605+RodrigoGiraoSerrao.md  20220318_225040_5621605+RodrigoGiraoSerrao.md  20220318_232612_5621605+RodrigoGiraoSerrao.md  20220319_000605_5621605+RodrigoGiraoSerrao.md  20220319_005337_5621605+RodrigoGiraoSerrao.md  20220319_120649_5621605+RodrigoGiraoSerrao.md  20220319_120756_5621605+RodrigoGiraoSerrao.md  20220319_141900_5621605+RodrigoGiraoSerrao.md  20220319_143122_5621605+RodrigoGiraoSerrao.md  20220319_144353_5621605+RodrigoGiraoSerrao.md  20220319_145407_5621605+RodrigoGiraoSerrao.md  20220320_102953_5621605+RodrigoGiraoSerrao.md  20220320_104109_5621605+RodrigoGiraoSerrao.md  20220320_122109_5621605+RodrigoGiraoSerrao.md  20220320_122253_5621605+RodrigoGiraoSerrao.md  20220320_122713_5621605+RodrigoGiraoSerrao.md
sniped/: __main__.py  compile_languages.py  configs.py  languages.py  services.py  themes.py
tests/: test_sniped.py
